2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* static/js: Add directory for JavaScript.

	* templates/base.html: Add dojo references.

	* settings.py: Configure logging.

2006-09-30  Doug Hellmann  <dhellmann@racemi.com>

	* static/css/site.css: Remove border from content element.
	Add styles for queue listing classes.

	* templates/three_columns.html: Add a title block so templates
	which override this one can override it.

	* urls.py (urlpatterns): Do not include the project name in
	imports or view names.  Use the generic view for handling logins
	that do not have a "next" value.
