@@ -14,6 +14,7 @@
 
     <div id="center_column">
         {% block content %}{% endblock %}
+        {% block status %}<div id="status_message" class="message"></div>{% endblock %}
     </div>
 
 {% endblock %}
