@@ -336,7 +336,7 @@ div.message {
   border: 1px solid black;
   color: black;
   font: bold 80% Verdana, Helvetica, Arial, sans-serif;
-  margin: 2em 0em 1em 0em;
+  margin: 2em; /* 0em 1em 0em;*/
   padding: 0.5em 1em;
   vertical-align: middle;
 }
